# burningShip

./: .gitignore  CMakeLists.txt  Points.md  README.md  compute_frame.c  main.c  rendermethod_HL.md  ship_iteration.h  write_frame.c
bsCompute/: CMakeLists.txt  bsCompute.cpp  bsTaskGen.cpp  bsTaskRun.cpp  userinput.cpp  userinput.h
bsRender/: CMakeLists.txt  bsRender.cpp  execute_task.cpp  userinput_render.cpp  userinput_render.h
burning_ship/: CMakeLists.txt  assembly_defines.h  assembly_impl.c  burning_ship.h  compute_frame.c  frame_operations.c  inline.h  render_frame.c  write_frame.c
colormaps/: CMakeLists.txt  color_sources.c  color_sources.cpp  color_sources.h  colors.c  colors.h
for_Matlab/: compute_fx.m  compute_matL.m  expexp.m  load_matrix.m  smooth_age_norm2.m
high_precison_double/: CMakeLists.txt  high_precision_double.cpp  high_precision_double.h  test_hpd.cpp
renders/: CMakeLists.txt  coloring_by_f32.c  distribution.cpp  print_colormap.m  renders.h  smooth_age_norm2.m  smooth_by_norm2.c  write_png.c
test_burning_ship/: CMakeLists.txt  main.c
to_mex/: burning_ship.c
zoomer/: CMakeLists.txt  main.cpp  scalable_label.cpp  scalable_label.h  zoomer.cpp  zoomer.h  zoomer.ui
